[package]
name = "arx-config"
description = "Arx config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-crypto = { workspace = true }
arx-crypto-derive = { workspace = true }
arx-protocol-constants = { workspace = true }
arx-logger = { workspace = true }
arx-secure-storage = { workspace = true }
arx-short-hex-str = { workspace = true }
arx-temppath = { workspace = true }
arx-types = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
get_if_addrs = { workspace = true }
mirai-annotations = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
arx-crypto = { workspace = true }

[features]
default = []
fuzzing = ["arx-crypto/fuzzing", "arx-types/fuzzing"]
testing = []
