[package]
name = "arx-sdk"
description = "The official Arx SDK"
version = "0.0.3"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-cached-packages = { workspace = true }
arx-crypto = { workspace = true }
arx-protocol-constants = { workspace = true }
arx-rest-client = { workspace = true }
arx-types = { workspace = true }
bcs = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
move-core-types = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
