[package]
name = "arx-vm-validator"
description = "Arx vm validator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-gas = { workspace = true }
arx-scratchpad = { workspace = true }
arx-state-view = { workspace = true }
arx-storage-interface = { workspace = true }
arx-types = { workspace = true }
arx-vm = { workspace = true }
fail = { workspace = true }

[dev-dependencies]
arx-cached-packages = { workspace = true }
arx-crypto = { workspace = true }
arx-db = { workspace = true }
arx-executor-test-helpers = { workspace = true }
arx-gas = { workspace = true, features = ["testing"] }
arx-temppath = { workspace = true }
arx-types = { workspace = true }
arx-vm = { workspace = true }
arx-vm-genesis = { workspace = true }
move-core-types = { workspace = true }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["arx-types/fuzzing", "arx-crypto/fuzzing", "arx-db/fuzzing"]
