[package]
name = "arx-api-types"
description = "Arx API Types"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arx-config = { workspace = true }
arx-crypto = { workspace = true }
arx-logger = { workspace = true }
arx-openapi = { workspace = true }
arx-storage-interface = { workspace = true }
arx-types = { workspace = true }
arx-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
