[package]
name = "arx-protocol-constants"
description = "Arx's protocol constant crate: the source of truth for protocol constant definitions which span multiple crates"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
testing = []
